# ChangeLog for dev-python/psutil
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/psutil/ChangeLog,v 1.35 2014/04/12 04:53:26 radhermit Exp $

*psutil-2.1.0 (12 Apr 2014)

  12 Apr 2014; Tim Harder <radhermit@gentoo.org> +psutil-2.1.0.ebuild:
  Version bump.

  02 Apr 2014; Tim Harder <radhermit@gentoo.org> psutil-2.0.0.ebuild:
  Add python3_4 support.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> psutil-0.7.1.ebuild,
  psutil-1.0.0.ebuild, psutil-1.0.1.ebuild, psutil-1.1.0.ebuild,
  psutil-1.1.1.ebuild, psutil-1.1.3.ebuild, psutil-1.2.1.ebuild,
  psutil-2.0.0.ebuild:
  Add support for the new PyPy slotting.

*psutil-2.0.0 (11 Mar 2014)

  11 Mar 2014; Tim Harder <radhermit@gentoo.org> +psutil-2.0.0.ebuild:
  Version bump.

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> psutil-1.2.1.ebuild:
  Stable for x86, wrt bug #502790

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> psutil-1.2.1.ebuild:
  amd64 stable, bug #502790

*psutil-1.2.1 (25 Nov 2013)

  25 Nov 2013; Tim Harder <radhermit@gentoo.org> +psutil-1.2.1.ebuild:
  Version bump.

*psutil-1.1.3 (10 Nov 2013)

  10 Nov 2013; Tim Harder <radhermit@gentoo.org> +psutil-1.1.3.ebuild:
  Version bump.

*psutil-1.1.1 (07 Oct 2013)

  07 Oct 2013; Tim Harder <radhermit@gentoo.org> +psutil-1.1.1.ebuild:
  Version bump.

*psutil-1.1.0 (28 Sep 2013)

  28 Sep 2013; Tim Harder <radhermit@gentoo.org> +psutil-1.1.0.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> psutil-0.7.1.ebuild,
  psutil-1.0.0.ebuild, psutil-1.0.1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  12 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
  psutil-1.0.1.ebuild:
  Keyword amd64-linux and x86-linux

  08 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> psutil-1.0.1.ebuild:
  Add ~arm keyword, wrt bug #477832

*psutil-1.0.1 (18 Jul 2013)

  18 Jul 2013; Tim Harder <radhermit@gentoo.org> +psutil-1.0.1.ebuild:
  Version bump.
