@@ -1,24 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/psutil/psutil-1.0.0.ebuild,v 1.3 2014/03/31 20:48:21 mgorny Exp $
-
-EAPI=5
-PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} pypy pypy2_0 )
-
-inherit distutils-r1
-
-DESCRIPTION="Retrieve information on running processes and system utilization"
-HOMEPAGE="http://code.google.com/p/psutil/ http://pypi.python.org/pypi/psutil"
-SRC_URI="http://psutil.googlecode.com/files/${P}.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-
-DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
-
-RESTRICT="test"
-
-python_test() {
-	esetup.py test
-}
