@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/psutil
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/psutil/ChangeLog,v 1.35 2014/04/12 04:53:26 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/psutil/ChangeLog,v 1.36 2014/04/12 04:54:36 radhermit Exp $
+
+  12 Apr 2014; Tim Harder <radhermit@gentoo.org> -psutil-0.7.1.ebuild,
+  -psutil-1.0.0.ebuild, -psutil-1.0.1.ebuild, -psutil-1.1.0.ebuild,
+  -psutil-1.1.1.ebuild, -psutil-1.1.3.ebuild:
+  Remove old.
 
 *psutil-2.1.0 (12 Apr 2014)
 
